add_library(QirRemoveNonEntrypointFunctionsPass MODULE QirRemoveNonEntrypointFunctions.cpp)
add_library(QirBarrierBeforeFinalMeasurementsPass MODULE QirBarrierBeforeFinalMeasurements.cpp)
add_library(QirGroupingPass MODULE QirGrouping.cpp)
add_library(QirRemoveBasicBlocksWithSingleNonConditionalBranchInstsPass MODULE QirRemoveBasicBlocksWithSingleNonConditionalBranchInsts.cpp)
add_library(QirReplaceConstantBranchesPass MODULE QirReplaceConstantBranches.cpp)
add_library(QirFunctionReplacementPass MODULE QirFunctionReplacement.cpp)
add_library(QirRedundantGatesCancellationPass MODULE QirRedundantGatesCancellation.cpp)
add_library(QirDeferMeasurementPass MODULE QirDeferMeasurement.cpp)

